Iau vmware image #25125 (#3316)
* VMware image deployment documentation for Server
* https://github.com/SUSE/spacewalk/issues/25125
* https://bugzilla.suse.com/show_bug.cgi?id=1227852
* https://github.com/SUSE/spacewalk/issues/24822
* drive-by edits
Co-authored-by: Ondřej Holeček <oholecek@suse.com>

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vmdk-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vmdk-suma.adoc
@@ -1,16 +1,15 @@
-[[install-vm-kvm]]
-= Deploy {productname} {productnumber} Server as a Virtual Machine - KVM
+[[install-vm-vmware]]
+= Deploy {productname} {productnumber} Server as a Virtual Machine - VMware
 ifeval::[{uyuni-content} == true]
 :noindex:
 endif::[]
 
 This chapter provides the required Virtual Machine settings for deployment of {productname} {productnumber} as an Image.
-KVM will be combined with Virtual Machine Manager (_virt-manager_) as a sandbox for this installation.
+VMware will be used as a sandbox for this installation.
 
 
-
-// FIXME: make this section a snippet or move it to a general intro for both,
-//        KVM and VMware
+// FIXME: make this and later sections a snippet or move it to a general
+//        intro for both, KVM and VMware
 == Available Images
 
 [IMPORTANT]
@@ -49,66 +48,31 @@ For additional information on the self install images, see:
 
 __* Two storage options are available for s390x: CDL DASD and FBA.__
 
-[[quickstart.sect.kvm.settings]]
-== Virtual Machine Manager (virt-manager) Settings
-
-Enter the following settings when creating a new virtual machine using *virt-manager*.
-
-[NOTE]
-====
-This table specifies the minimum requirements.
-These are suitable for a quick test installation, such as a server with one client.
-If you want to use a production environment and especially need background information about disk space, see xref:installation-and-upgrade:hardware-requirements.adoc[].
-====
-
-
-[cols="1,1", options="header"]
-|===
-2+<| KVM Settings
-| Installation Method | Import Existing Disk Image
-| OS:                 | Linux
-| Version:            | {productname}-Server.x86_64-5.0.0-Build16.10.qcow2
-| Memory:             | 16 GB
-| CPU's:              | 4
-| Storage Format:     | _.qcow2_ 100 GB (Default) Root Partition
-| Name:               | test-setup
-| Network             | Bridge _br0_
-|===
 
 
 
-[[minimmal.kvm.settings]]
-== Initial KVM Setup
 
-.Procedure: Creating Initial Setup
-. Create a new virtual machine using the downloaded {minimal} KVM image and select [guimenu]``Import existing disk image``.
+[[quickstart.sect.vmware.settings]]
+== {productname} Virtual Machine Settings - VMware
+
+This sections describes VMware configurations, focusing on the creation of an extra virtual disk essential for the {productname} storage partition within VMware environments.
+
+.Procedure: Creating the VMware Virtual Machine
+
+. Download {productname} Server [filename]``.vmdk`` file then transfer a copy to your VMware storage.
+
+. Make a copy of uploaded [filename]``.vmdk`` file using VMware web interface.
+  This will convert provided [filename]``.vmdk`` file to the format suitable for vSpere hypervisor.
+
+. Create and name a new virtual machine based on the Guest OS Family [systemitem]``Linux`` and Guest OS Version {sle} 15 (64-bit).
+
+. Add an additional [systemitem]``Hard Disk 2`` of 500 GB (or more).
+
 . Configure RAM and number of CPUs (at least 16 GB RAM and 4 CPUs).
-. Name your KVM machine.
-. Click btn:[Begin Installation] to boot from the image.
-. At the JeOS Firstboot screen select start to continue.
-+
 
-image::jeos-firstboot.png[]
+. Set the network adapter as required.
 
-. Select keyboard layout.
-+
-
-image::select-keyboard.png[]
-
-.  Accept the license agreement.
-+
-
-image::accept-license-agreement.png[]
-
-. Select your time zone.
-+
-
-image::enter-timezone.png[]
-
-. Enter a password for root.
-+
-
-image::root-password.png[]
+. Power on the VM, and follow firstboot dialogs (keyboard layout, license agreement, time zone, password for root).
 
 . When installation completes log in as root.
 
@@ -116,8 +80,10 @@ image::root-password.png[]
 
 
 
+[[minimal.susemgr.prep]]
 == Register {sl-micro} and {productname} {productnumber} Server
 
+Before starting obtain your SUSE Manager Registration Code from SUSE Customer Center - https://scc.suse.com.
 
 .Procedure: Registering {sl-micro} and {productname} {productnumber}
 . Boot the virtual machine.
