VM deployment adjustments https://github.com/SUSE/spacewalk/issues/25125 Update info on KVM and VMware Move boot image configuration such as ignition to new file install-ignition.adoc Create new file install-ignition.adoc and add to nav

--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -43,6 +43,7 @@ ifeval::[{suma-content} == true]
 endif::[]
 
 **** xref:install-pubcloud.adoc[Install on Public Cloud]
+**** xref:install-ignition.adoc[Boot Image Configuration]
 *** {productname} Proxy
 
 ifeval::[{suma-content} == true]
