--- a/modules/installation-and-upgrade/pages/install-vm.adoc
+++ b/modules/installation-and-upgrade/pages/install-vm.adoc
@@ -42,16 +42,14 @@ If you want to use a production environment, review the requirements listed in x
 | VirtIO Disk 2       | 101 GB for [path]``/var/spacewalk``
 | VirtIO Disk 3       | 50 GB for [path]``/var/lib/pgsql``
 | VirtIO Disk 4       | 4 GB for swap
-| CDROM               | Ignition or Cloud Init configuration disk
 | Name:               | suse-manager-test-setup
-| Network             | Bridge _br0_
+| Network:            | Bridge _br0_
 |===
 
 [NOTE]
 ====
 For more information on {sle} Virtualization, see https://documentation.suse.com/sles/15-SP4/html/SLES-all/book-virtualization.html.
 ====
-
 
 
 
@@ -91,27 +89,32 @@ Also consider to create a separate partition for [path]``/srv`` where Kiwi image
 |===
 +
 
-// FIXME: replace the following with firstboot (see 5.0 docs)
-. Click btn:[Add Hardware] to attach a virtual CDROM device with the prepared [systemitem]``Ignition`` or [systemitem]``Cloud Init`` disk.
 . Click btn:[Begin Installation] to boot the new VM from the {productname} image.
-  Wait until the login prompt is presented.
-  Log in using credentials set by configuration disk.
+. At the JeOS Firstboot screen select start to continue and check the following configuration dialogs (keyboard layout, license agreement, time zone, password for root).
+
+. When installation completes log in as root.
+
+. Proceed with xref:installation-and-upgrade:install-vm.adoc#minimal.susemgr.prep[].
 
 
+
+// FIXME: check the following and esp. replace with firstboot (see 5.0 docs)
 == {productname} Virtual Machine Creation - VMware
 
 This sections describes VMware configurations, focusing on the creation of an extra virtual disk essential for the {productname} storage partition within VMware environments.
 
 .Procedure: Creating the VMware Virtual Machine
 
-. Download {productname} Server [filename]``.vmdk`` file then transfer a copy to your VMware storage.
-+
+. Download {productname} Server [filename]``.vmdk`` file.
+  Then transfer a copy to your VMware storage.
 
-// FIXME: replace the following with firstboot (see 5.0 docs)
-. Upload the prepared Ignition or Cloud Init disk file you created using the instructions above.
+. Make a copy of uploaded [filename]``.vmdk`` file using VMware web interface.
+  This will convert provided [filename]``.vmdk`` file to the format suitable for vSpere hypervisor.
 
 . Create and name a new virtual machine based on the Guest OS Family [systemitem]``Linux`` and Guest OS Version {sle} 15 (64-bit).
++
 
+// FIXME: Do we need the following step?  I think, in 5.0 we removed it
 . In [guimenu]``Customize settings`` browse to the uploaded [filename]``.vmdk`` using [systemitem]``IDE controller 0`` storage device in the [systemitem]``Controller Location``.
 
 . Add an additional [systemitem]``Hard Disk 2`` of 500 GB (or more).
@@ -120,11 +123,14 @@ This sections describes VMware configurations, focusing on the creation of an ex
 
 . Set the network adapter as required.
 
-. Set the [systemitem]``CD/DVD Drive 1`` to use the uploaded configuration as a [systemitem]``Datastore ISO``.
-  Tick the box next to btn:[Connect].
-  This drive must be present when you power on the machine initially.
+. Power on the VM.
 
-. Power on the VM, and log in using credentials set by configuration disk.
+. At the JeOS Firstboot screen select start to continue and check the following configuration dialogs (keyboard layout, license agreement, time zone, password for root).
+
+. When installation completes log in as root.
+
+. Proceed with xref:installation-and-upgrade:install-vm.adoc#minimal.susemgr.prep[].
+
 
 
 [[minimal.susemgr.prep]]
