Ignition section adjusted

--- a/modules/installation-and-upgrade/pages/install-ignition.adoc
+++ b/modules/installation-and-upgrade/pages/install-ignition.adoc
@@ -2,15 +2,14 @@
 = Boot Image Configuration Tools
 
 
-// FIXME: make is more general
-//        drop clould-init?
-//        mention combustion?
+// FIXME: is labeling name such as Boot Image Configuration Tool correct?
+//        can we drop clould-init here?
+//        is combustion available and shall we mention it?
 
 [IMPORTANT]
 ====
-{productname} VM image does not set up [systemitem]``root`` or any other user account.
-User or [systemitem]``root`` authentications need to be set up during first boot.
-This can be done using [systemitem]``Ignition`` or [systemitem]``Cloud-Init`` methods.
+{productname} VM images are prepared with JeOS firstboot configuration dialogs.
+Using a boot image configuration tool such as [systemitem]``Ignition`` is optinal now.
 ====
 
 
@@ -99,7 +98,8 @@ Substitute your password hash for the one in this example.
 For more information about [systemitem]``Ignition``, see https://documentation.suse.com/sle-micro/5.4/single-html/SLE-Micro-deployment/#cha-images-ignition.
 
 
-
+////
+// FIXME: adjust and enable the following, if needed
 [[sumavm.cloud_init]]
 == {productname} basic configuration using Cloud Init disk
 
@@ -166,3 +166,4 @@ mkisofs -rational-rock -joliet -o suma_cloudinit.iso -V cidata network-config me
 Attach the created [path]``suma_cloudinit.iso`` file as a volume to the creating virtual machine.
 This particular example is setting [systemitem]``root`` password to `linux`.
 Substitute your password hash for the one in this example
+////
