add ignition note and run ucf

--- a/modules/installation-and-upgrade/pages/install-vm.adoc
+++ b/modules/installation-and-upgrade/pages/install-vm.adoc
@@ -9,8 +9,11 @@ You will find the images for {productname} {productnumber} in various formats.
 They include {sles} {sles-version} {sp-base} as the underlying operating system and the {productname} software current at the time of build.
 Download the appropriate {productname} image for your environment from https://download.suse.com/.
 
-// FIXME: add note here: now firstboot
-//                       ignition is optional now
+[NOTE]
+====
+Using a tool such as [systemitem]``Ignition`` to set up a [systemitem]``root`` password it optional now.
+For more information about [systemitem]``Ignition``, see xref:installation-and-upgrade:install-ignition.adoc[].
+====
 
 
 
