--- a/modules/installation-and-upgrade/pages/install-vm.adoc
+++ b/modules/installation-and-upgrade/pages/install-vm.adoc
@@ -11,7 +11,7 @@ Download the appropriate {productname} image for your environment from https://d
 
 [NOTE]
 ====
-Using a tool such as [systemitem]``Ignition`` to set up a [systemitem]``root`` password it optional now.
+Using a tool such as [systemitem]``Ignition`` to set up a [systemitem]``root`` password is optional now.
 For more information about [systemitem]``Ignition``, see xref:installation-and-upgrade:install-ignition.adoc[].
 ====
 
