Apply suggestions from code review
Co-authored-by: Ornela Marić <omaric@suse.com>

--- a/modules/installation-and-upgrade/pages/install-ignition.adoc
+++ b/modules/installation-and-upgrade/pages/install-ignition.adoc
@@ -15,7 +15,7 @@ Using a boot image configuration tool such as [systemitem]``Ignition`` is optina
 
 
 [[sumavm.ignition]]
-== {productname} basic configuration using [systemitem]``Ignition``
+== {productname} Basic Configuration Using [systemitem]``Ignition``
 
 [systemitem]``Ignition`` is a provisioning tool that enables you to configure a system according to your specification on the first boot.
 When the system is booted for the first time, [systemitem]``Ignition`` is loaded as part of an initramfs and searches for a configuration file within a specific directory (on a USB flash disk, or you can provide a URL).
