--- a/modules/installation-and-upgrade/pages/install-vm.adoc
+++ b/modules/installation-and-upgrade/pages/install-vm.adoc
@@ -3,7 +3,7 @@
 
 
 
-This chapter provides procedures how you can deploy a Kernel Virtual Machine (KVM) or VMware image.
+This chapter provides procedures for deploying Kernel Virtual Machine (KVM) or VMware images.
 
 You will find the images for {productname} {productnumber} in various formats.
 They include {sles} {sles-version} {sp-base} as the underlying operating system and the {productname} software current at the time of build.
@@ -93,9 +93,9 @@ Also consider to create a separate partition for [path]``/srv`` where Kiwi image
 +
 
 . Click btn:[Begin Installation] to boot the new VM from the {productname} image.
-. At the JeOS Firstboot screen select start to continue and check the following configuration dialogs (keyboard layout, license agreement, time zone, password for root).
+. At the JeOS Firstboot screen select btn:[Start] to continue and check the following configuration options (keyboard layout, license agreement, time zone, password for root).
 
-. When installation completes log in as root.
+. When installation completes, log in as root.
 
 . Proceed with xref:installation-and-upgrade:install-vm.adoc#minimal.susemgr.prep[].
 
