add ubuntu 24.04 LTS as supported https://github.com/SUSE/spacewalk/issues/25382

--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -1,13 +1,13 @@
 [[clients-ubuntu]]
-= Registering {ubuntu} 20.04 and 22.04 Clients
+= Registering {ubuntu} 20.04, 22.04 and 24.04 Clients
 
 
-This section contains information about registering {salt} clients running {ubuntu} 20.04 LTS and 22.04 LTS operating systems.
+This section contains information about registering {salt} clients running {ubuntu} 20.04 LTS, 22.04 LTS and 24.04 LTS operating systems.
 
 // Use list format: repository URLs / packages and metadata / version info
 [IMPORTANT]
 ====
-* {ubuntu} 20.04 and 22.04 repository URLs are available from {scc}
+* {ubuntu} 20.04, 22.04 and 24.04 repository URLs are available from {scc}
 * Packages and metadata are provided by Ubuntu, not by {suse}
 * For supported products, see the support table and the release notes
 * Canonical does not endorse or support {productname}.
@@ -41,6 +41,7 @@ The products you need for this procedure are:
 | OS Version     | Product Name
 | {ubuntu} 20.04 | Ubuntu 20.04
 | {ubuntu} 22.04 | Ubuntu 22.04
+| {ubuntu} 24.04 | Ubuntu 24.04
 |===
 
 include::snippets/addchannels_vendor_webui.adoc[]
@@ -56,6 +57,7 @@ The channels you need for this procedure are:
 | OS Version     | Base Channel
 | {ubuntu} 20.04 | ubuntu-2004-amd64-main-amd64
 | {ubuntu} 22.04 | ubuntu-2204-amd64-main-amd64
+| {ubuntu} 24.04 | ubuntu-2404-amd64-main-amd64
 |===
 
 include::snippets/addchannels_vendor_cli.adoc[]
