--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -90,7 +90,7 @@ For non-{suse} operating systems, including {rhel}, {centos}, and {oracle}, only
 | {cross}
 | {check}
 
-| {ubuntu} 22.04, 20.04
+| {ubuntu} 24.04, 22.04, 20.04
 | {amd64}
 | {cross}
 | {check}
