--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -112,7 +112,7 @@ The operating system running on a client is supported by the organization that s
 | {cross}
 | {check}
 
-| {ubuntu} 22.04, 20.04
+| {ubuntu} 24.04, 22.04, 20.04
 | {amd64}
 | {cross}
 | {check}
