--- a/modules/administration/pages/auth-methods-pam.adoc
+++ b/modules/administration/pages/auth-methods-pam.adoc
@@ -1,21 +1,21 @@
 [[auth-methods-pam]]
 = Authentication With PAM
 
-{productname} supports network-based authentication systems using pluggable authentication modules (PAM) using SSSD.
+{productname} supports network-based authentication systems using Pluggable Authentication Modules (PAM) using SSSD.
+
 PAM is a suite of libraries that allows you to integrate {productname} with a centralized authentication mechanism, eliminating the need to remember multiple passwords.
+
 {productname} supports LDAP, Kerberos, and other network-based authentication.
-
-[NOTE]
-====
-In usernames, additionally to alphanumeric characters, [literal]``-``, [literal]``_``, [literal]``.``, and [literal]``@`` are allowed.
-====
-
 
 
 .Procedure: Configuring SSSD
 . In the {productname} {webui}, navigate to menu:Users[Create User] and enable a new or existing user to authenticate with PAM.
++
+[NOTE]
+====
+In usernames, additionally to alphanumeric characters, [literal]``-``, [literal]``_``, [literal]``.``, and [literal]``@`` are allowed.
+====
 . Check the [guimenu]``Pluggable Authentication Modules (PAM)`` checkbox.
-  It is below the password and password confirmation fields.
 . Configure SSSD in the container.
   Connect inside the container using:
 +
