--- a/modules/administration/pages/auth-methods-pam.adoc
+++ b/modules/administration/pages/auth-methods-pam.adoc
@@ -1,12 +1,12 @@
 [[auth-methods-pam]]
 = Authentication With PAM
 
-{productname} supports network-based authentication systems using Pluggable Authentication Modules (PAM) using SSSD.
-
+{productname} supports network-based authentication systems using pluggable suthentication modules (PAM) using SSSD.
 PAM is a suite of libraries that allows you to integrate {productname} with a centralized authentication mechanism, eliminating the need to remember multiple passwords.
+{productname} supports LDAP, Kerberos, and other network-based authentication protocols.
 
-{productname} supports LDAP, Kerberos, and other network-based authentication.
 
+== SSSD Configuration
 
 .Procedure: Configuring SSSD
 . In the {productname} {webui}, navigate to menu:Users[Create User] and enable a new or existing user to authenticate with PAM.
@@ -27,6 +27,8 @@ Then change the file
 ----
 /etc/sssd/sssd.conf
 ----
++
+. Set [literal]``krb5_keytab`` in ``domain/$domain`` to [literal]``/etc/sssh/krb5.keytab``
 . Restart {productname} using:
 +
 ----
