--- a/modules/administration/pages/auth-methods-pam.adoc
+++ b/modules/administration/pages/auth-methods-pam.adoc
@@ -1,7 +1,7 @@
 [[auth-methods-pam]]
 = Authentication With PAM
 
-{productname} supports network-based authentication systems using pluggable suthentication modules (PAM) using SSSD.
+{productname} supports network-based authentication systems using pluggable authentication modules (PAM) using SSSD.
 PAM is a suite of libraries that allows you to integrate {productname} with a centralized authentication mechanism, eliminating the need to remember multiple passwords.
 {productname} supports LDAP, Kerberos, and other network-based authentication protocols.
 
