--- a/modules/administration/pages/auth-methods-pam.adoc
+++ b/modules/administration/pages/auth-methods-pam.adoc
@@ -28,7 +28,7 @@ Then change the file
 /etc/sssd/sssd.conf
 ----
 +
-. Set [literal]``krb5_keytab`` in ``domain/$domain`` to [literal]``/etc/sssh/krb5.keytab``
+. Set [literal]``krb5_keytab`` in ``domain/$domain`` to [literal]``/etc/sssd/krb5.keytab``
 . Restart {productname} using:
 +
 ----
