--- a/modules/client-configuration/pages/package-management.adoc
+++ b/modules/client-configuration/pages/package-management.adoc
@@ -53,8 +53,7 @@ A package can become orphaned as a result of one of the following events:
 
 
 * A synchronized repository removes a package.
-  By default, {productname} 5.0 unlinks such package from the channel, but does not remove the package.
-  In {productname} 4.3, you can enable this behavior by using the [literal]``strict mode`` channel configuration.
+  With  [literal]``strict mode`` channel configuration, {productname} unlinks such a package from the channel, but will not remove the package.
 * A repository supersedes a package with a newer version and thus removes the previous version.
 * The reposync process got interrupted (for example, because of an out of space exception) and thus downloaded packages were not associated with a channel.
 * Users manually uploaded packages, but did not associate them with any channel.
