--- a/modules/client-configuration/pages/package-management.adoc
+++ b/modules/client-configuration/pages/package-management.adoc
@@ -63,17 +63,17 @@ Orphaned package can make sense with specific workflows like bootstrapping or cu
 
 You can view orphaned packages in the {webui} by clicking menu:Software[Manage > Packages > view Packages in no channel]
 
-{productname} periodically runs a Taskomatic job that searches for orphaned packages and modifies the package organization ID to 1.
-This means that you can delete orphaned packages only after the Taskomatic job execution.
+{productname} periodically runs a taskomatic job that searches for orphaned packages and modifies the package organization ID to 1.
+This means that you can delete orphaned packages only after the taskomatic job execution.
 If you encounter an orphaned package that you cannot delete, wait 24 hours and try the deletion again.
 
 // .Procedure: Deleting orphaned packages
 
-You can deleted orphaned packages:
+Delete orphaned packages:
 
 // * With the UI (FIXME is this possible?  How?
 
-* with commandline tools targeting individual packages.
+* with command line tools targeting individual packages.
   For example:
 +
 
@@ -81,7 +81,7 @@ You can deleted orphaned packages:
 spacecmd package_remove zypper-1.14.52-150400.1.9.x86_64
 ----
 
-* with commandline tools targeting all orphaned packages at once:
+* with command line tools targeting all orphaned packages at once:
 +
 
 ----
