--- a/modules/client-configuration/pages/package-management.adoc
+++ b/modules/client-configuration/pages/package-management.adoc
@@ -60,7 +60,7 @@ A package can become orphaned as a result of one of the following events:
 
 
 * A synchronized repository removes a package.
-  By default, {productname} unlinks such package from the channel, but does not remove the package.
+  By default, {productname} unlinks such a package from the channel, but does not remove the package.
 * A repository supersedes a package with a newer version and thus removes the previous version.
 * The reposync process got interrupted (for example, because of an out of space exception) and thus downloaded packages were not associated with a channel.
 * Users manually uploaded packages, but did not associate them with any channel.
