cleanup from code review in 4.3 branch (#3347)

--- a/modules/client-configuration/pages/package-management.adoc
+++ b/modules/client-configuration/pages/package-management.adoc
@@ -60,8 +60,7 @@ A package can become orphaned as a result of one of the following events:
 
 
 * A synchronized repository removes a package.
-  By default, {productname} 5.0 unlinks such package from the channel, but does not remove the package.
-  In {productname} 4.3, you can enable this behavior by using the [literal]``strict mode`` channel configuration.
+  By default, {productname} unlinks such a package from the channel, but does not remove the package.
 * A repository supersedes a package with a newer version and thus removes the previous version.
 * The reposync process got interrupted (for example, because of an out of space exception) and thus downloaded packages were not associated with a channel.
 * Users manually uploaded packages, but did not associate them with any channel.
@@ -69,27 +68,26 @@ A package can become orphaned as a result of one of the following events:
 Orphaned packages cost space in user environment and cannot be easily distributed to clients because they are not associated with a channel.
 Orphaned package can make sense with specific workflows like bootstrapping or customer-specific procedures.
 
-You can view orphaned packages in the {webui} by clicking menu:Software[Manage > Packages > view Packages in no channel]
+You can view orphaned packages in the {webui} by clicking menu:Software[Manage > Packages > view Packages in no channel].
 
-{productname} periodically runs a Taskomatic job that searches for orphaned packages and modifies the package organization ID to 1.
-This means that you can delete orphaned packages only after the Taskomatic job execution.
-If you encounter an orphaned package that you cannot delete, wait 24 hours and try the deletion again.
+{productname} periodically runs a taskomatic job that searches for orphaned packages and modifies the package organization ID to 1.
+This means that you can delete orphaned packages only after the taskomatic job execution.
+If you encounter an orphaned package that you cannot delete, wait 24 hours and try the deletion again.
 
 // .Procedure: Deleting orphaned packages
 
-You can deleted orphaned packages:
+Delete orphaned packages:
 
 // * With the UI (FIXME is this possible?  How?
 
-* with commandline tools targeting individual packages.
-  For example:
+* with command line tools targeting individual packages; for example:
 +
 
 ----
 spacecmd package_remove zypper-1.14.52-150400.1.9.x86_64
 ----
 
-* with commandline tools targeting all orphaned packages at once:
+* with command line tools targeting all orphaned packages at once:
 +
 
 ----
