--- a/modules/administration/pages/auth-methods-pam.adoc
+++ b/modules/administration/pages/auth-methods-pam.adoc
@@ -3,19 +3,19 @@
 
 {productname} supports network-based authentication systems using pluggable authentication modules (PAM) using SSSD.
 PAM is a suite of libraries that allows you to integrate {productname} with a centralized authentication mechanism, eliminating the need to remember multiple passwords.
-{productname} supports LDAP, Kerberos, and other network-based authentication.
+{productname} supports LDAP, Kerberos, and other network-based authentication protocols.
 
+
+== SSSD Configuration
+
+.Procedure: Configuring SSSD
+. In the {productname} {webui}, navigate to menu:Users[Create User] and enable a new or existing user to authenticate with PAM.
++
 [NOTE]
 ====
 In usernames, additionally to alphanumeric characters, [literal]``-``, [literal]``_``, [literal]``.``, and [literal]``@`` are allowed.
 ====
-
-
-
-.Procedure: Configuring SSSD
-. In the {productname} {webui}, navigate to menu:Users[Create User] and enable a new or existing user to authenticate with PAM.
 . Check the [guimenu]``Pluggable Authentication Modules (PAM)`` checkbox.
-  It is below the password and password confirmation fields.
 . Configure SSSD in the container.
   Connect inside the container using:
 +
@@ -27,6 +27,8 @@ Then change the file
 ----
 /etc/sssd/sssd.conf
 ----
++
+. Set [literal]``krb5_keytab`` in ``domain/$domain`` to [literal]``/etc/sssd/krb5.keytab``
 . Restart {productname} using:
 +
 ----
