--- a/modules/client-configuration/pages/configuration-basics.adoc
+++ b/modules/client-configuration/pages/configuration-basics.adoc
@@ -7,6 +7,5 @@ This section contains summary of the initial configuration steps that are necess
 
 
 ifeval::[{uyuni-content} == true]
-* For more information about installing {productname}, see xref:installation-and-upgrade:install-uyuni.adoc[].
-* For more information about setting up {productname}, see xref:installation-and-upgrade:uyuni-server-setup.adoc[].
+* For more information about installing and setting up {productname}, see xref:installation-and-upgrade:installation-and-upgrade-overview.adoc[].
 endif::[]
