--- a/modules/installation-and-upgrade/pages/server-intro-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/server-intro-uyuni.adoc
@@ -2,13 +2,6 @@
 = Upgrade the Server
 
 {productname} uses a rolling release versioning schema.
-Check the release notes for information about which upgrade strategy to use to upgrade to the next version:
+Check the release notes for information about which upgrade strategy to use to upgrade to the next version.
 
-Minor Upgrades::
-You can consider minor upgrades as regular upgrades.
-For more information, see xref:installation-and-upgrade:server-minor-upgrade-uyuni.adoc[].
-
-Major Upgrades::
-You can consider major upgrades as special upgrades.
-In this case components such as the base operating system, Salt, or the PostgreSQL database will be upgraded.
-For more information, see xref:installation-and-upgrade:server-major-upgrade-uyuni.adoc[].
+For more information, see xref:installation-and-upgrade:container-management/updating-server-containers.adoc[].
