--- a/modules/retail/pages/retail-network-arch.adoc
+++ b/modules/retail/pages/retail-network-arch.adoc
@@ -24,7 +24,7 @@ endif::[]
 
 ifeval::[{uyuni-content} == true]
 {productname} {smr} Branch Servers are implemented as enhanced {productname} Proxies.
-For technical background information on {productname} Proxies, see xref:installation-and-upgrade:install-proxy-uyuni.adoc[].
+For technical background information on {productname} Proxies, see xref:installation-and-upgrade:container-deployment/uyuni/proxy-container-setup-uyuni.adoc[].
 endif::[]
 
 
