--- a/modules/retail/pages/retail-uyuni-branchserver.adoc
+++ b/modules/retail/pages/retail-uyuni-branchserver.adoc
@@ -9,7 +9,7 @@ This section covers {productname} {smr} Branch Server installation and setup, us
 * Register the Branch Server and Terminals as Clients
 
 The {productname} {smr} Branch Server is a {productname} Proxy with additional Retail features.
-For proxy installation procedures, see xref:installation-and-upgrade:install-proxy-uyuni.adoc[] and xref:installation-and-upgrade:uyuni-proxy-setup.adoc[].
+For proxy installation procedures, see xref:installation-and-upgrade:container-deployment/uyuni/proxy-container-setup-uyuni.adoc[].
 
 Then continue with the following sections.
 
