Uyuni 2024.09 xrefs keichwa (#3351)
* fix xrefs (container); delete obsolete adoc files
* run update cfg files

--- a/modules/retail/pages/retail-uyuni-branchserver.adoc
+++ b/modules/retail/pages/retail-uyuni-branchserver.adoc
@@ -9,7 +9,7 @@ This section covers {productname} {smr} Branch Server installation and setup, us
 * Register the Branch Server and Terminals as Clients
 
 The {productname} {smr} Branch Server is a {productname} Proxy with additional Retail features.
-For proxy installation procedures, see xref:installation-and-upgrade:install-proxy-uyuni.adoc[] and xref:installation-and-upgrade:uyuni-proxy-setup.adoc[].
+For proxy installation procedures, see xref:installation-and-upgrade:container-deployment/uyuni/proxy-container-setup-uyuni.adoc[].
 
 Then continue with the following sections.
 
@@ -102,8 +102,8 @@ A retail branch server is registered as an openSUSE proxy.
 The proxy can be bootstrapped using the {webui}, or at the command prompt.
 Ensure you use the activation key you created for the proxy.
 
-For more information about proxies, see xref:installation-and-upgrade:uyuni-proxy-registration.adoc[].
-For more information about activation keys, see xref:client-configuration:activation-keys.adoc[].
+* For more information about proxies, see xref:installation-and-upgrade:container-deployment/uyuni/proxy-container-setup-uyuni.adoc[].
+* For more information about activation keys, see xref:client-configuration:activation-keys.adoc[].
 
 
 
@@ -124,7 +124,6 @@ configure-proxy.sh
 ----
 +
   [command]``configure-proxy.sh`` is an interactive script.
-  For more information about the proxy setup script, see xref:installation-and-upgrade:uyuni-proxy-setup.adoc#uyuni-proxy-setup-confproxy[].
 
 . OPTIONAL: If you want to use the same system also as a build host, navigate to the client's system profile and check [systemitem]``OS Image Build Host`` as a [guimenu]``Add-On System Types``.
 
