--- a/modules/installation-and-upgrade/pages/server-intro-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/server-intro-uyuni.adoc
@@ -2,6 +2,6 @@
 = Upgrade the Server
 
 {productname} uses a rolling release versioning schema.
-Check the release notes for information about which upgrade strategy to use to upgrade to the next version.
+Check the release notes for information about the strategy for upgrading to the next version.
 
 For more information, see xref:installation-and-upgrade:container-management/updating-server-containers.adoc[].
