--- a/modules/administration/pages/admin-overview.adoc
+++ b/modules/administration/pages/admin-overview.adoc
@@ -1,6 +1,6 @@
 [[admin-overview]]
 = Administration Guide Overview
 
-**Updated:** {docdate}
+[.currentrel]**Version: {productnumber}**
 
 This book provides guidance on performing administration tasks on the {productname} Server.
