--- a/modules/client-configuration/pages/client-config-overview.adoc
+++ b/modules/client-configuration/pages/client-config-overview.adoc
@@ -1,7 +1,7 @@
 [[client-cfg-overview]]
 = Client Configuration Guide Overview
 
-**Updated:** {docdate}
+[.currentrel]**Version: {productnumber}**
 
 Registering clients is the first step after installing {productname}, and most of the time you spend with {productname} is spent on maintaining those clients.
 
