--- a/modules/common-workflows/pages/common-workflows-overview.adoc
+++ b/modules/common-workflows/pages/common-workflows-overview.adoc
@@ -1,7 +1,7 @@
 [[common-workflows-overview]]
 = Common workflows overview
 
-**Updated:** {docdate}
+[.currentrel]**Version: {productnumber}**
 
 The {productname} Common Workflows Guide covers most commonly used workflows you need to install, manage, and configure your clients with {productname}.
 
