--- a/modules/installation-and-upgrade/pages/installation-and-upgrade-overview.adoc
+++ b/modules/installation-and-upgrade/pages/installation-and-upgrade-overview.adoc
@@ -1,6 +1,6 @@
 = Deployment and Upgrade Guide Overview
 
-**Updated:** {docdate}
+[.currentrel]**Version: {productnumber}**
 
 This book provides guidance on deploying and upgrading {productname} Server and Proxy.
 It is split into the following sections:
