--- a/modules/quickstart/pages/quickstart-overview.adoc
+++ b/modules/quickstart/pages/quickstart-overview.adoc
@@ -1,7 +1,7 @@
 [[quickstart-suma-overview]]
 = Quick Start 
 
-**Updated:** {docdate}
+[.currentrel]**Version: {productnumber}**
 
 This guide shows you how to use deploy and configure a single {productname} Server or Proxy.
 
