--- a/modules/reference/pages/reference-overview.adoc
+++ b/modules/reference/pages/reference-overview.adoc
@@ -1,7 +1,7 @@
 [[reference-guide-overview]]
 = Reference Guide Overview
 
-**Updated:** {docdate}
+[.currentrel]**Version: {productnumber}**
 
 This document contains several sections:
 
