--- a/modules/specialized-guides/pages/specialized-guides-overview.adoc
+++ b/modules/specialized-guides/pages/specialized-guides-overview.adoc
@@ -1,7 +1,7 @@
 [[specialized-guides-overview]]
 = Specialized Guides Overview
 
-**Updated:** {docdate}
+[.currentrel]**Version: {productnumber}**
 
 This book contains a list of special topics and functionalities of {productname}.
 
