--- a/modules/retail/pages/retail-overview.adoc
+++ b/modules/retail/pages/retail-overview.adoc
@@ -1,7 +1,7 @@
 [[retail-overview]]
 = Retail Guide Overview
 
-**Updated:** {docdate}
+[.currentrel]**Version: {productnumber}**
 
 
 {productname} {smr} {productnumber} is an open source infrastructure management solution, optimized and tailored specifically for the retail industry.
