remove FIXMEs and add clarifications (per feedback)

--- a/modules/installation-and-upgrade/pages/install-vm.adoc
+++ b/modules/installation-and-upgrade/pages/install-vm.adoc
@@ -113,12 +113,9 @@ This sections describes VMware configurations, focusing on the creation of an ex
 
 . Make a copy of uploaded [filename]``.vmdk`` file using VMware web interface.
   This will convert provided [filename]``.vmdk`` file to the format suitable for vSpere hypervisor.
+  Use this new copy as a base image for the virtual machine.
 
 . Create and name a new virtual machine based on the Guest OS Family [systemitem]``Linux`` and Guest OS Version {sle} 15 (64-bit).
-+
-
-// FIXME: Do we need the following step?  I think, in 5.0 we removed it
-. In [guimenu]``Customize settings`` browse to the uploaded [filename]``.vmdk`` using [systemitem]``IDE controller 0`` storage device in the [systemitem]``Controller Location``.
 
 . Add an additional [systemitem]``Hard Disk 2`` of 500 GB (or more).
 
